--- a/Конспекты/Data Science/Machine learning/Обучение с учителем/Классификация/Decision Trees.ipynb
+++ b/Конспекты/Data Science/Machine learning/Обучение с учителем/Классификация/Decision Trees.ipynb
@@ -225,8 +225,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "376e3fec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"123\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "486a4b3b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -248,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.1"
   },
   "toc": {
    "base_numbering": 1,
