--- a/Конспекты/Data Science/Machine learning/Обучение с учителем/Регрессия/Linear Regression.ipynb
+++ b/Конспекты/Data Science/Machine learning/Обучение с учителем/Регрессия/Linear Regression.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "fe7d0a6f",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Формула"
    ]
@@ -11,7 +13,9 @@
   {
    "cell_type": "markdown",
    "id": "caaa95b8",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "**Шаг 1** Формула имеет следующий вид:\n",
     "$$\n",
@@ -24,7 +28,9 @@
   {
    "cell_type": "markdown",
    "id": "0c4ef131",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "**Шаг 2** У нас есть уравнение для одной точки, а если у нас четыре точки – то есть вместо одного уравнения мы можем написать четыре уравнения (верхний индекс – это номер точки в нашем датасете, от одного до 4):\n",
     "\n",
@@ -45,7 +51,9 @@
   {
    "cell_type": "markdown",
    "id": "40823821",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "**Шаг 3** Перейдём в векторным обозначениям\n",
     "$$\n",
@@ -69,7 +77,9 @@
   {
    "cell_type": "markdown",
    "id": "ba1552b9",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "**Шаг 4** Мы переписали каждую сумму в виде умножения векторов. А теперь для для удобства записи мы перейдем к матричному умножению (подробнее посмотрите на  [википедии](https://ru.wikipedia.org/wiki/Умножение_матриц)):\n",
     "\n",
@@ -97,9 +107,7 @@
   {
    "cell_type": "markdown",
    "id": "5634db1e",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Импорт библиотек"
    ]
@@ -108,9 +116,7 @@
    "cell_type": "code",
    "execution_count": 91,
    "id": "23f20cd1",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -277,9 +283,7 @@
   {
    "cell_type": "markdown",
    "id": "6909164f",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Требования к входным данным"
    ]
@@ -287,9 +291,7 @@
   {
    "cell_type": "markdown",
    "id": "021a3e5d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Чтобы линейная регрессия хорошо работала должны выполняться следующие требования:\n",
     "* остатки регрессии (величины $y_i-\\hat{y_i}$) должны иметь нормальное (гауссово) распределение (это можно проверить, например, построив гистограмму)\n",
@@ -301,10 +303,7 @@
   {
    "cell_type": "markdown",
    "id": "932381fc",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Масштабирование"
    ]
@@ -312,9 +311,7 @@
   {
    "cell_type": "markdown",
    "id": "a4c9208e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Для первичной обработки данных, для борьбы с большими по модулю значениями, которые являются выбросами обычно используют\n",
     "\n",
@@ -328,9 +325,7 @@
    "cell_type": "code",
    "execution_count": 129,
    "id": "03563581",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -366,9 +361,7 @@
    "cell_type": "code",
    "execution_count": 131,
    "id": "f2970e0a",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -404,10 +397,7 @@
   {
    "cell_type": "markdown",
    "id": "980fbcf9",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## z-score"
    ]
@@ -415,9 +405,7 @@
   {
    "cell_type": "markdown",
    "id": "ce180c78",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Более интересный метод - это Standart Scaling или Z-score normalization. Это преобразование позволяет \"сгладить\" данные, избавить их от выбросов."
    ]
@@ -426,9 +414,7 @@
    "cell_type": "code",
    "execution_count": 132,
    "id": "cf14aa65",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -462,9 +448,7 @@
   {
    "cell_type": "markdown",
    "id": "8acf0e59",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Мы видим, что в результате $z$-трансформации данные сместились в сторону нуля (появились как отрицательные значения, так и положительные) а так же уменьшился масштаб – данные похожи на нормальное (гауссовское) распределение)"
    ]
@@ -472,10 +456,7 @@
   {
    "cell_type": "markdown",
    "id": "562dabe7",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## min-max normalization\n",
     "\n"
@@ -484,9 +465,7 @@
   {
    "cell_type": "markdown",
    "id": "b20b30ef",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Другой распространённый метод называется MinMax Scaling. Этот метод переносит все точки на отрезок [0;1]\n",
     "$$\n",
@@ -498,9 +477,7 @@
    "cell_type": "code",
    "execution_count": 133,
    "id": "b1c97975",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -529,9 +506,7 @@
   {
    "cell_type": "markdown",
    "id": "66f58e40",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Эта трансформация оцень полезна для визуализации данных – позволяет \"ужать\" точки в единичный отрезок и компактно отобразить их на графике. Полезна тем, что сохраняет относительные расстояния между точками (т.е. структуру датасета)"
    ]
@@ -539,9 +514,7 @@
   {
    "cell_type": "markdown",
    "id": "fbd2a72f",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Как применять эти знания на практике? Используйте следующий алгоритм:\n",
     "\n",
@@ -555,9 +528,7 @@
   {
    "cell_type": "markdown",
    "id": "143ec1af",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Создание модели линейной регрессии"
    ]
@@ -566,8 +537,7 @@
    "cell_type": "markdown",
    "id": "c266313d",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "##  Создание регрессора по формуле"
@@ -785,10 +755,7 @@
   {
    "cell_type": "markdown",
    "id": "8011c5cf",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "##  Создание регрессора с помощью библиотеки"
    ]
@@ -796,9 +763,7 @@
   {
    "cell_type": "markdown",
    "id": "04ccc990",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "###  Создание модели"
    ]
@@ -807,9 +772,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "07c5d23e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# выгружаем признаки и целевые значения в отдельные переменные\n",
@@ -821,9 +784,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "00101dfe",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# создаем регрессор\n",
@@ -841,9 +802,7 @@
   {
    "cell_type": "markdown",
    "id": "445494ad",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "###  Строим график нашей модели"
    ]
@@ -852,9 +811,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "9b594514",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -885,9 +842,7 @@
   {
    "cell_type": "markdown",
    "id": "7849f9f1",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Создание модели с 2 признаками"
    ]
@@ -895,9 +850,7 @@
   {
    "cell_type": "markdown",
    "id": "a2e869af",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Формула линейной  регрессии с 2 признаками"
    ]
@@ -905,9 +858,7 @@
   {
    "cell_type": "markdown",
    "id": "c958ec5f",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "$y' = w_2' * x_2 + w_1' * x_1' + w_0'$"
    ]
@@ -915,9 +866,7 @@
   {
    "cell_type": "markdown",
    "id": "6f7f5ae4",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Строим график по 2 признакам"
    ]
@@ -926,9 +875,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "f49182fb",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -962,9 +909,7 @@
   {
    "cell_type": "markdown",
    "id": "8217cb36",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "##  Деление выборки"
    ]
@@ -973,9 +918,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "931a6a53",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# выгружаем признаки и целевые значения в отдельные переменные\n",
@@ -986,9 +929,7 @@
   {
    "cell_type": "markdown",
    "id": "4eabe9a5",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Создание регрессора по 2 признакам"
    ]
@@ -997,9 +938,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "74a79698",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# создаем регрессор\n",
@@ -1018,9 +957,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "31a23950",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1046,9 +983,7 @@
   {
    "cell_type": "markdown",
    "id": "2bb2ebf2",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Строим график нашей модели"
    ]
@@ -1057,9 +992,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "9aa6daa6",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1099,9 +1032,7 @@
   {
    "cell_type": "markdown",
    "id": "9ed5b866",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "#  Метрики качества"
    ]
@@ -1109,9 +1040,7 @@
   {
    "cell_type": "markdown",
    "id": "6d478bc4",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "В задачах машинного обучения мы хотим сравнивать несколько моделей машинного обучения и выбирать наилучшую из них. Решение о том, какая модель хорошая, а какая плохая, принимается на основе одной или нескольких *метрик* моделей машинного обучения."
    ]
@@ -1119,9 +1048,7 @@
   {
    "cell_type": "markdown",
    "id": "bb9db6f4",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Метрики принимают на вход два вектора, предсказания модели и истинные значения, после чего вычисляют по этим векторам качество модели.\n",
     "\n",
@@ -1132,9 +1059,7 @@
    "cell_type": "code",
    "execution_count": 95,
    "id": "4636765f",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.datasets import fetch_california_housing\n",
@@ -1154,9 +1079,7 @@
   {
    "cell_type": "markdown",
    "id": "779ea56e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Теперь посмотрим, какие функции можно применять к этим двум наборам точек"
    ]
@@ -1164,9 +1087,7 @@
   {
    "cell_type": "markdown",
    "id": "792692ee",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Mean absolute error (MAE)\n",
     "\n",
@@ -1176,9 +1097,7 @@
   {
    "cell_type": "markdown",
    "id": "8a4b4332",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "*Mean Absolute Error* - это просто сумма отклонений истинных значений $y$ от предсказаний нашей модели:\n",
     "\n",
@@ -1195,9 +1114,7 @@
    "cell_type": "code",
    "execution_count": 96,
    "id": "d7dc5300",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1218,9 +1135,7 @@
   {
    "cell_type": "markdown",
    "id": "fc6d4ef7",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Mean Squared Error (MSE)\n",
     "\n",
@@ -1232,9 +1147,7 @@
   {
    "cell_type": "markdown",
    "id": "d6b34c92",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "В целом логика та же, что в *MAE*, только усреднять мы будем квадраты ошибок \n",
     "$$\n",
@@ -1250,9 +1163,7 @@
    "cell_type": "code",
    "execution_count": 97,
    "id": "f814eac5",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1273,9 +1184,7 @@
   {
    "cell_type": "markdown",
    "id": "b66e9f1a",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## $R^2$ (коэффициент детерминации)\n",
     "\n",
@@ -1288,9 +1197,7 @@
    "cell_type": "code",
    "execution_count": 98,
    "id": "8f34bd8a",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1310,9 +1217,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f4919fa7",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -1346,7 +1251,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
