--- a/Конспекты/Data Science/Machine learning/Обучение с учителем/Регрессия/Градиентный спуск.ipynb
+++ b/Конспекты/Data Science/Machine learning/Обучение с учителем/Регрессия/Градиентный спуск.ipynb
@@ -492,9 +492,7 @@
   {
    "cell_type": "markdown",
    "id": "0dd25fc6",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Подготовка"
    ]
@@ -502,9 +500,7 @@
   {
    "cell_type": "markdown",
    "id": "02db76b9",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Импорт библиотек"
    ]
@@ -513,9 +509,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "b6e0e0a2",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -532,9 +526,7 @@
   {
    "cell_type": "markdown",
    "id": "16cce53f",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Загрузка данных"
    ]
@@ -543,9 +535,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "fb684115",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('non_linear.csv', sep=',')\n",
@@ -555,9 +545,7 @@
   {
    "cell_type": "markdown",
    "id": "809acf1b",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Создание модели"
    ]
@@ -566,9 +554,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "e04733db",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -652,9 +638,7 @@
   {
    "cell_type": "markdown",
    "id": "fb921098",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Запустим шажки градиентного спуска (те самые итерации). Для градиентного спуска мы используем готовый класс SGDRegressor: https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.SGDRegressor.html . Класс принимает следующие параметры\n",
     "\n",
@@ -673,9 +657,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "422899fd",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -725,9 +707,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "66bc2645",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -761,7 +741,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
