--- a/Конспекты/Data Science/Анализ данных/Pandas.ipynb
+++ b/Конспекты/Data Science/Анализ данных/Pandas.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "d0113dd4",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "4ba02ebf",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
        "4  Peter  32   NaN"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "13bf22da",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
        "4  Peter   32   NaN"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "2caa9b4a",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "12.0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "96f88ea0",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
        "Name: age, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "2e430566",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
        "2  Moica   25   7.0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "5daae314",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
        "1   Sam   36  12.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "68f9a15d",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
        "Peter  Peter   32   NaN"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "8fbac04d",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
        "36"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "id": "093825f5",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
        "Name: expr, dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "4fed7b13",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "Lisa    27   7.0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "8c88c5b1",
    "metadata": {},
    "outputs": [
@@ -622,7 +622,7 @@
        "(5, 3)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "id": "1993a096",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
        "5"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "id": "f795aac7",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,7 @@
        "3"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "id": "4bb70194",
    "metadata": {},
    "outputs": [
@@ -692,15 +692,15 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 4 entries, Anna to Lisa\n",
+      "Index: 5 entries, Anna to Peter\n",
       "Data columns (total 3 columns):\n",
       " #   Column  Non-Null Count  Dtype  \n",
       "---  ------  --------------  -----  \n",
-      " 0   name    4 non-null      object \n",
-      " 1   age     4 non-null      int64  \n",
+      " 0   name    5 non-null      object \n",
+      " 1   age     5 non-null      int64  \n",
       " 2   expr    4 non-null      float64\n",
       "dtypes: float64(1), int64(1), object(1)\n",
-      "memory usage: 128.0+ bytes\n"
+      "memory usage: 332.0+ bytes\n"
      ]
     }
    ],
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "id": "deae0d58",
    "metadata": {},
    "outputs": [
@@ -796,7 +796,7 @@
        "max    36.000000  12.000000"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "id": "dce689eb",
    "metadata": {},
    "outputs": [
@@ -875,7 +875,7 @@
        "Sam    Sam   36  12.0"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "7541779b",
    "metadata": {},
    "outputs": [
@@ -954,7 +954,7 @@
        "Peter  Peter   32   NaN"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "id": "b3577521",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1047,7 @@
        "Lisa    Lisa   27   7.0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "id": "911ca8dd",
    "metadata": {},
    "outputs": [
@@ -1120,7 +1120,7 @@
        "Sam   Sam   36  12.0"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "id": "3899788c",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1184,7 @@
        "Sam   Sam   36  12.0"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1194,9 +1194,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f240df74",
+   "metadata": {},
+   "source": [
+    "### Удаление столбцов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3f8c0f1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>expr</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Anna</th>\n",
+       "      <td>Anna</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sam</th>\n",
+       "      <td>Sam</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Moica</th>\n",
+       "      <td>Moica</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lisa</th>\n",
+       "      <td>Lisa</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        name  expr\n",
+       "name              \n",
+       "Anna    Anna   3.0\n",
+       "Sam      Sam  12.0\n",
+       "Moica  Moica   7.0\n",
+       "Lisa    Lisa   7.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop(['age'], axis=1).head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e58693d7",
+   "metadata": {},
+   "source": [
+    "### Уникальные значения"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b917399f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.0     2\n",
+       "3.0     1\n",
+       "12.0    1\n",
+       "Name: expr, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"expr\"].value_counts()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "421a45a9",
+   "id": "552351fc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1204,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f8c0f1a",
+   "id": "1c5799b8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1227,6 +1346,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
