--- a/Конспекты/Data Science/Предобработка данных/Предварительная обработка данных.ipynb
+++ b/Конспекты/Data Science/Предобработка данных/Предварительная обработка данных.ipynb
@@ -11,9 +11,7 @@
   {
    "cell_type": "markdown",
    "id": "25e25eb0",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Поиск неявных дубликатов"
    ]
@@ -21,9 +19,7 @@
   {
    "cell_type": "markdown",
    "id": "4c8f9926",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Как упоминалось ранее, для «gender» 49 различных значений, и было подозрение, что некоторые из этих значений не следует рассматривать как разные категории. В конечном итоге для простоты мы разделим данные на 3 категории: мужчина, женщина и другие (сюда вошли те категории, которые можно однозначно исключить из предыдущих двух, для примера - трансгендер).\n",
     "\n",
@@ -33,9 +29,7 @@
   {
    "cell_type": "markdown",
    "id": "dc562096",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "```python\n",
     "male_terms = [\"male\", \"m\", \"mal\", \"msle\", \"malr\", \"mail\", \"make\", \"cis male\", \"man\", \"maile\", \"male (cis)\", \"cis man\"] \n",
@@ -56,9 +50,7 @@
   {
    "cell_type": "markdown",
    "id": "39a9a4f7",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Обработка нулевых значений"
    ]
@@ -66,9 +58,7 @@
   {
    "cell_type": "markdown",
    "id": "e403056a",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "В любом наборе данных реального мира всегда есть несколько нулевых значений. На самом деле не имеет значения, является ли это регрессией, классификацией или любой другой проблемой, ни одна модель не может обрабатывать эти значения NULL или NaN самостоятельно, поэтому нам нужно вмешаться.\n",
     "\n",
@@ -80,9 +70,7 @@
   {
    "cell_type": "markdown",
    "id": "bff4d22a",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "```python\n",
     "df.isnull()  \n",
@@ -92,9 +80,7 @@
   {
    "cell_type": "markdown",
    "id": "90f84f09",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Есть разные способы решения этой проблемы. Самый простой способ решить эту проблему - удалить строки или столбцы, содержащие нулевые значения."
    ]
@@ -102,9 +88,7 @@
   {
    "cell_type": "markdown",
    "id": "75f53640",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "```python\n",
     "df.dropna()\n",
@@ -114,9 +98,7 @@
   {
    "cell_type": "markdown",
    "id": "2f8e815d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "dropna () принимает различные параметры, такие как:\n",
     "\n",
@@ -130,9 +112,7 @@
   {
    "cell_type": "markdown",
    "id": "a116600c",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Однако это не лучший вариант удаления строк и столбцов из нашего набора данных, так как это может привести к потере ценной информации. Если у вас есть 300K точек данных, то удаление 2–3 строк не сильно повлияет на ваш набор данных, но если у вас есть только 100 точек данных, из которых 20 имеют значения NaN для определенного поля, вы не можете просто отбросить эти строки. В реальных наборах данных может случиться так, что у вас есть большое количество значений NaN для определенного поля."
    ]
@@ -140,9 +120,7 @@
   {
    "cell_type": "markdown",
    "id": "127ea466",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Например - предположим, что мы собираем данные из опроса, тогда возможно, что может быть необязательное поле, которое, скажем, 20% людей оставит пустым. Итак, когда мы получаем набор данных, мы должны понимать, что оставшиеся 80% данных все еще полезно, поэтому вместо того, чтобы отбрасывать эти значения, нам нужно как-то заменить недостающие 20% -ые значения Мы можем сделать это с помощью **Вменение** или заменить их на отрицательное число которое не встречается в таблице например -1.\n",
     "\n"
@@ -151,9 +129,7 @@
   {
    "cell_type": "markdown",
    "id": "b7956148",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Вменение "
    ]
@@ -161,9 +137,7 @@
   {
    "cell_type": "markdown",
    "id": "43021e07",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Импутация - это просто процесс подстановки пропущенных значений в нашем наборе данных. Мы можем сделать это, определив нашу собственную настраиваемую функцию, или мы можем просто выполнить импутацию, используяImputerкласс предоставлен sklearn."
    ]
@@ -171,9 +145,7 @@
   {
    "cell_type": "markdown",
    "id": "7f9df8a4",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "```python\n",
     "from sklearn.preprocessing import Imputer\n",
@@ -187,9 +159,7 @@
   {
    "cell_type": "markdown",
    "id": "a1a71dff",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Здесь у нас есть два столбца с пропущенными значениями: C и D.\n",
     "\n",
@@ -201,18 +171,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "276cfe59",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "6652028f",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Пропуски"
    ]
@@ -220,9 +186,7 @@
   {
    "cell_type": "markdown",
    "id": "1c6b32a7",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Очень часто случается так, что в наборе данных пропущены те или иные значения. Данные с пропусками чаще всего нельзя просто так взять передать в модель. Самый простой способ избавиться от пропусков в данных — просто удалить строки, в которых есть пропущенные значения. Но бывают случаи, когда такое удаление строк может привести к потере большого количества информации."
    ]
@@ -230,9 +194,7 @@
   {
    "cell_type": "markdown",
    "id": "d9715528",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Помимо удаления строк существуют иные, более \"стойкие\" к потере обучающей информации, методы. Прежде чем рассмотреть эти методы, отмечу, что признаки можно поделить на категориальные и численные."
    ]
@@ -240,9 +202,7 @@
   {
    "cell_type": "markdown",
    "id": "2db2bd56",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Пропуски в категориальных признаках"
    ]
@@ -250,9 +210,7 @@
   {
    "cell_type": "markdown",
    "id": "08a5870a",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "полнить пропуски в категориальных признаках можно следующими способами:\n",
     "* Заменить пропущенное значение новой категорией \"Неизвестно\".\n",
@@ -262,9 +220,7 @@
   {
    "cell_type": "markdown",
    "id": "98e4f475",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Пропуски в численных признаках"
    ]
@@ -272,9 +228,7 @@
   {
    "cell_type": "markdown",
    "id": "a770ebe6",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Если имеем дело с численными признаками, можно применить следующие подходы:\n",
     "* Заменить пропущенное значение средним значением.\n",
@@ -332,9 +286,7 @@
   {
    "cell_type": "markdown",
    "id": "72bae7cd",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Нормализация"
    ]
@@ -342,9 +294,7 @@
   {
    "cell_type": "markdown",
    "id": "6a8475f0",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Нормализация — это приведение всех значений признака к новому диапазону. Например, к диапазону [0, 1]. Это полезно, поскольку значения признаков могут изменяться в очень большом диапазоне. Причем, значения разных признаков могут отличаться на несколько порядков. А после нормализации они все будут находиться в узком (и, часто, едином) диапазоне."
    ]
@@ -352,9 +302,7 @@
   {
    "cell_type": "markdown",
    "id": "0fc85f7f",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Наиболее популярным способом нормализации является нормализация методом минимакса. Для того, чтобы применить этот метод, должно быть известно максимальное и минимальное значение признака. Проблема в том, что эти значения известны не всегда.\n",
     "\n",
@@ -364,9 +312,7 @@
   {
    "cell_type": "markdown",
    "id": "a4f39cd7",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Также довольно популярным методом является Z-нормализация. Диапазон новых значений для Z-нормализации выглядит следующим образом:\n",
     "\n",
@@ -378,9 +324,7 @@
   {
    "cell_type": "markdown",
    "id": "48d8100b",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Выполняется Z-нормализация по формуле ниже.\n",
     "\n",
@@ -394,9 +338,7 @@
   {
    "cell_type": "markdown",
    "id": "83a7b2bb",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## One-hot encoding"
    ]
@@ -404,9 +346,7 @@
   {
    "cell_type": "markdown",
    "id": "5a34ef98",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Это способ предварительной обработки категориальных признаков. Многие модели плохо работают с категориальными признаками как таковыми. Дело в том, что слово \"Российская Федерация\" нельзя просто взять и умножить на какое-нибудь число. Но многие модели работают именно так: берется коэффициент и на него умножается значение признака. Аналогичная операция выполняется с остальными признаками. Все результаты суммируются. На основе значения суммы делается вывод о принадлежности объекта к тому или иному классу (такие модели называются линейными)."
    ]
@@ -414,9 +354,7 @@
   {
    "cell_type": "markdown",
    "id": "3baade81",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Однако, как поступать с признаками, значения которых нельзя выразить численно? Можно заменить их значения численным идентификатором. Например, вместо значения \"Российская Федерация\" использовать значение 1, а вместо \"Великобритания\" — 2. Тогда линейная модель будет работать. Но, если поступить таким образом, будет утеряно свойство категориальности признака. Иными словами, модель будет пытаться сравнивать идентификаторы признаков между собой. Но они не сравнимы по значению."
    ]
@@ -424,9 +362,7 @@
   {
    "cell_type": "markdown",
    "id": "a426c918",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Чтобы бороться с этой проблемой, был придуман способ преобразовать исходный признак в несколько новых, бинарных признаков. Например, можно признак \"Страна\" превратить в 4 новых бинарных признака следующим образом:"
    ]
@@ -434,9 +370,7 @@
   {
    "cell_type": "markdown",
    "id": "50051a20",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "| ID | Имя     | Страна Российская Федерация | Страна_Великобритания |Страна Северная Корея | Страна_Бразилия |\n",
     "| -- |  ------ | --------------------------- | --------------------- | -------------------- | --------------- |\n",
@@ -451,9 +385,7 @@
   {
    "cell_type": "markdown",
    "id": "2efce3f0",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Для каждого из этих признаков линейная модель будет использовать независимый коэффициент и, таким образом, не будет сравнивать категориальные значения одного и того же признака между собой."
    ]
@@ -461,19 +393,27 @@
   {
    "cell_type": "markdown",
    "id": "9f15d9df",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "One-Hot Encoding - довольно крутой и аккуратный хак, но с ним связана только одна проблема: Мультиколлинеарность. Поскольку вы все, должно быть, предположили, что это довольно тяжелое слово, поэтому его должно быть трудно понять, поэтому позвольте мне подтвердить ваше вновь сформировавшееся убеждение. Мультиколлинеарность - это действительно немного хитрая, но чрезвычайно важная концепция статистики. Здесь хорошо то, что нам не нужно понимать все мельчайшие детали мультиколлинеарности, нам просто нужно сосредоточиться на том, как это повлияет на нашу модель. Итак, давайте углубимся в эту концепцию мультиколлинеарности и как она повлияет на нашу модель."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "ecaaa752",
+   "metadata": {},
+   "source": [
+    "код:\n",
+    "```python\n",
+    "data = pd.get_dummies(df)\n",
+    "data\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f5165735",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Мультиколлинеарность"
    ]
@@ -481,9 +421,7 @@
   {
    "cell_type": "markdown",
    "id": "c2356069",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Мультиколлинеарность возникает в нашем наборе данных, когда у нас есть особенности, которые сильно зависят друг от друга. В этом случае у нас есть особенности -\n",
     "\n",
@@ -496,9 +434,7 @@
   {
    "cell_type": "markdown",
    "id": "6cf8dace",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Чтобы избежать Multicollinearity\n",
     "\n",
@@ -508,9 +444,7 @@
   {
    "cell_type": "markdown",
    "id": "783b5c97",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "```python\n",
     "df_cat = pd.get_dummies(df_cat[['color','size','price']],drop_first=True)\n",
@@ -520,9 +454,7 @@
   {
    "cell_type": "markdown",
    "id": "edb0432d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Здесь drop_first удалит первый столбец цвета. Поэтому здесь color_blue будет удален, и у нас будут только color_green и color_white.\n",
     "\n",
@@ -603,9 +535,7 @@
   {
    "cell_type": "markdown",
    "id": "617c0b61",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Кодирование данных"
    ]
@@ -613,9 +543,7 @@
   {
    "cell_type": "markdown",
    "id": "6df81671",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "На самом деле Pandas группирует и хранит “столбцы” блоками, разбитыми по типам. Иными словами float, int и objects хранятся раздельно, причем оптимизировано, без индексов. С числами все просто — столбцы в блоке объединяются в многомерный массив NumPy. При запросе значения происходит сопоставление индекса с массивом. С объектами немного сложнее. Все это означает, что разные объекты по-разному используют память."
    ]
@@ -623,9 +551,7 @@
   {
    "cell_type": "markdown",
    "id": "d920342d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "```python\n",
     "numerics_part.info(memory_usage='deep')\n",
@@ -652,9 +578,7 @@
   {
    "cell_type": "markdown",
    "id": "ef670248",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Изменим эту ситуацию и вот как: получим минимальное и максимальное значение в серии, затем сравним его с машинными лимитами для типов Numpy, после чего заменим на наименьшее."
    ]
@@ -662,9 +586,7 @@
   {
    "cell_type": "markdown",
    "id": "33b5577e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "```python\n",
     "numerics = ['int16', 'int32', 'int64', 'float16', 'float32', 'float64'] \n",
@@ -688,9 +610,7 @@
   {
    "cell_type": "markdown",
    "id": "1a272744",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Мы выполнили самопальный вариант понижающего преобразования, выиграв 74.4Mb."
    ]
@@ -698,9 +618,7 @@
   {
    "cell_type": "markdown",
    "id": "f39c3db7",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "```python\n",
     "numerics_part.info(memory_usage='deep', max_cols=0)\n",
@@ -716,9 +634,7 @@
   {
    "cell_type": "markdown",
    "id": "a47c9619",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Но у нас все еще есть проблема:\n",
     "\n",
@@ -728,9 +644,7 @@
   {
    "cell_type": "markdown",
    "id": "e0b70bd8",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "```python\n",
     "numerics_part.fillna(value=-1, inplace=True)\n",
@@ -741,9 +655,7 @@
   {
    "cell_type": "markdown",
    "id": "90e036e8",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "**Переходим к объектам.** Тип object в Pandas хранит строковое представление. Строки хранятся фрагментировано - значение в ячейке по сути является указателем. При этом резервируется много памяти и это для нас плохо."
    ]
@@ -751,9 +663,7 @@
   {
    "cell_type": "markdown",
    "id": "b263e109",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Pandas предоставляет подтип category, который отображает строковые данные на индекс в int, а это то, что нам нужно, т.к. данные будут храниться не в виде указателя, а в виде словаря, в котором целочисленным значениям сопоставлены уникальным значениям данных. Перегоним наши объекты в «категории»:"
    ]
@@ -761,9 +671,7 @@
   {
    "cell_type": "markdown",
    "id": "b298a3af",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "```python\n",
     "# subtype categoty\n",
@@ -788,9 +696,7 @@
   {
    "cell_type": "markdown",
    "id": "f089b14b",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Мы отбросим часть объектов, т.к. договорились ранее не работать с нераспакованной частью json"
    ]
@@ -798,9 +704,7 @@
   {
    "cell_type": "markdown",
    "id": "c099b041",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "```python\n",
     "converted_objects_part, unconverted_objects_part = object_to_category(objects_part)\n",
@@ -824,9 +728,7 @@
   {
    "cell_type": "markdown",
    "id": "1bb3681e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Временную метку оптимизируем с помощью функции pandas pd.to_datetime. Параметр format позволяет задать тип представления временной отметки. Дефолтный вот такой: “%d/%m/%Y”. Теперь метка будет выглядеть так:"
    ]
@@ -834,9 +736,7 @@
   {
    "cell_type": "markdown",
    "id": "27177c31",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "```python\n",
     "df_train['timestamp'] = pd.to_datetime(df_train['timestamp'])\n",
@@ -857,9 +757,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "06995ecf",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
