--- a/Конспекты/Data Science/Карта машинного обучения.ipynb
+++ b/Конспекты/Data Science/Карта машинного обучения.ipynb
@@ -8,7 +8,11 @@
    },
    "cell_type": "markdown",
    "id": "d1e90ac2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Карта мира машинного обучения\n",
     "![6.webp](attachment:6.webp)"
@@ -22,7 +26,11 @@
    },
    "cell_type": "markdown",
    "id": "b0f0f642",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Основные виды  машинного обучения\n",
     "![7.webp](attachment:7.webp)"
@@ -32,7 +40,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3042a542",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
