--- a/Конспекты/Data Science/Предсказание пожаров.ipynb
+++ b/Конспекты/Data Science/Предсказание пожаров.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "eight-cutting",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -20,7 +24,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "dirty-cooler",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv('Data.csv')"
@@ -30,7 +38,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "cooperative-production",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -171,7 +183,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "apart-auction",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -191,7 +207,11 @@
   {
    "cell_type": "markdown",
    "id": "latter-confidence",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Переименовываем колонки (англ. яз)"
    ]
@@ -200,7 +220,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "atomic-glucose",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df.rename(columns={df.columns[0]: 'Fire number', df.columns[1]: 'Date', df.columns[4]: 'Area', \n",
@@ -212,7 +236,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "collect-shipping",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -345,7 +373,11 @@
   {
    "cell_type": "markdown",
    "id": "given-yemen",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Информация о данных"
    ]
@@ -354,7 +386,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "official-likelihood",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -388,7 +424,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "direct-texas",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -548,7 +588,11 @@
   {
    "cell_type": "markdown",
    "id": "pressed-forestry",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Визуализация"
    ]
@@ -556,7 +600,11 @@
   {
    "cell_type": "markdown",
    "id": "chinese-casting",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Кол-во пожаров по типам растительности (V_type)"
    ]
@@ -565,7 +613,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "divine-stone",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -589,7 +641,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "developed-extension",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -611,7 +667,11 @@
   {
    "cell_type": "markdown",
    "id": "respected-corner",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Добавляем новую колонку (месяц) "
    ]
@@ -620,7 +680,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "pregnant-chair",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df['Num_month'] = df['Date'].apply(lambda date: int(date.split('/')[0]))"
@@ -630,7 +694,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "incoming-malta",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -770,7 +838,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "aquatic-mumbai",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def to_month(num_month):\n",
@@ -790,7 +862,11 @@
   {
    "cell_type": "markdown",
    "id": "ordinary-stereo",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Кол-во пожаров по месяцам каждой растительности"
    ]
@@ -799,7 +875,11 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "recent-garbage",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -821,7 +901,11 @@
   {
    "cell_type": "markdown",
    "id": "italian-church",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Кол-во пожаров по дням недели каждой растительности"
    ]
@@ -830,7 +914,11 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "least-catalyst",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -852,7 +940,11 @@
   {
    "cell_type": "markdown",
    "id": "hungarian-particular",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Распределение Area и Temp для каждого пожара"
    ]
@@ -861,7 +953,11 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "fitted-soviet",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -895,7 +991,11 @@
   {
    "cell_type": "markdown",
    "id": "extreme-provider",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Строим модель и прогнозируем площадь пожара"
    ]
@@ -904,7 +1004,11 @@
    "cell_type": "code",
    "execution_count": 51,
    "id": "intellectual-substitute",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def fire_area(date, X, Y, temp, humidity, soil_moisture, pressure_pa, V_type):\n",
@@ -952,7 +1056,11 @@
    "cell_type": "code",
    "execution_count": 52,
    "id": "present-lightweight",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -970,7 +1078,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "asian-income",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -978,7 +1090,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "aboriginal-night",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -986,7 +1102,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "valid-clarity",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -994,7 +1114,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "excess-cement",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
