--- a/Конспекты/Data Science/Machine learning/Обучение без учителя/Кластеризация/Метрики качества кластеризации.ipynb
+++ b/Конспекты/Data Science/Machine learning/Обучение без учителя/Кластеризация/Метрики качества кластеризации.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "13a50650",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Метрики качества кластеризации"
    ]
@@ -11,7 +15,11 @@
   {
    "cell_type": "markdown",
    "id": "6193d1d6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Задача оценки качества кластеризации является более сложной по сравнению с оценкой качества классификации. Нам неизвестны \"истинные\" метки объектов, поэтому нужны такие метрики качества, которые можно вычислить по неразмеченной выборке."
    ]
@@ -19,7 +27,11 @@
   {
    "cell_type": "markdown",
    "id": "dcbbacd2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Коэффициент Силуэтта "
    ]
@@ -27,7 +39,11 @@
   {
    "cell_type": "markdown",
    "id": "b2356709",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "К-т Силуэтта (англ *Silhouette*) - это метрика, которая не предполагает знания истинных меток объектов, и позволяет оценить качество кластеризации, используя только саму (неразмеченную) выборку и результат кластеризации.\n",
     "\n",
@@ -41,7 +57,11 @@
   {
    "cell_type": "markdown",
    "id": "e520c631",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Чтобы вычислить его для каждого объекта нужно вычислить для каждого объекта выборки две величины, $a$ (среднее расстояние от данного объекта до объектов из того же кластера) и $b$ (среднее расстояние от данного объекта до объектов из ближайшего кластера (отличного от того, в котором лежит сам объект)). \n",
     "\n",
@@ -55,7 +75,11 @@
   {
    "cell_type": "markdown",
    "id": "877f264f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Силуэтом выборки называется средняя величина силуэта объектов данной выборки. Таким образом, силуэт показывает, насколько среднее расстояние до объектов своего кластера отличается от среднего расстояния до объектов других кластеров. Эта величина меняется в интервале от $-1$ до $1$:\n",
     "\n",
@@ -72,7 +96,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "10f378d6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -90,7 +118,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "f6f196b1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -121,7 +153,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "1bf6a188",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -142,7 +178,11 @@
   {
    "cell_type": "markdown",
    "id": "2febbd89",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Таким образом мы вычислили качество нашей кластеризации - например, мы можем выбрать с помощью этой метрики количество кластеров. Как узнать, сколько кластеров лучше - два или три? Давайте посчитаем  метрику силуэта для случая трех кластеров"
    ]
@@ -151,7 +191,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "5b459136",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -173,7 +217,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "ca2ccd0d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -199,7 +247,11 @@
   {
    "cell_type": "markdown",
    "id": "b269c21d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Целевая метрика увеличилась - значит, три кластера лучше чем два! Визуально кажется, что два кластера лучше, но метрика показывает обратное - так получилось из-за того, что в кластерах множество выбросов и простой алгоритм K-Means не может выделить правильные кластеры. Косвенно это значит, что алгоритм не подходит для решения нашей задачи. В реальных задачах нужно доверять метрике, а не собственным глазам."
    ]
@@ -207,7 +259,11 @@
   {
    "cell_type": "markdown",
    "id": "7c034eef",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Adjusted Mutual Information"
    ]
@@ -215,7 +271,11 @@
   {
    "cell_type": "markdown",
    "id": "d1c42b1f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Мы знаем, что в задаче кластеризации можно использовать метрику \"коэффициент Силуэтта\". Это очень удобно и идеально подходит для случаев, когда выборку невозможно разметить - например, из-за большого объёма. \n",
     "\n",
@@ -230,7 +290,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "e25f4a8d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -253,7 +317,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "40fb46d7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
